--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #modal-card-head{
-    margin: 0;
-    
+    margin: 0; 
 }
+
 .modal-card-title{
         color: white; 
         flex-grow: 1;
@@ -12,4 +12,9 @@
 
 #messageAlert{
     visibility: hidden;
+    position: fixed;
+    top: 45%;
+    left : 45%;
 }
+
+
